# industrialIOT

./: README.md  docker-compose.yml
ca-server/: Cargo.toml  Dockerfile
ca-server/src/: main.rs
certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  device-0001.crt  device-0001.key  device-0002.crt  device-0002.key  device-0003.crt  device-0003.key  device-0004.crt  device-0004.key  device-0005.crt  device-0005.key  device-0006.crt  device-0006.key  device-0007.crt  device-0007.key  device-0008.crt  device-0008.key  device-0009.crt  device-0009.key  device-0010.crt  device-0010.key  device-0011.crt  device-0011.key  device-0012.crt  device-0012.key  device-0013.crt  device-0013.key  device-0014.crt  device-0014.key  device-0015.crt  device-0015.key  device-0016.crt  device-0016.key  device-0017.crt  device-0017.key  (+1970 more)
device-logic/: Cargo.toml
device-logic/src/: lib.rs
load-tester/: Cargo.toml
load-tester/src/: main.rs
registration-client/: Cargo.toml  device.crt  device.key
registration-client/src/: main.rs
registration-server/: .dockerignore  Cargo.toml  Dockerfile
registration-server/src/: handlers.rs  lib.rs  main.rs  types.rs
