[package]
name = "ca-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
# RIMUOVIAMO rcgen, AGGIUNGIAMO openssl e altre utility
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
etcd-client = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
base64 = "0.22"