[package]
name = "device-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
bincode = "1.3"
openssl = "0.10"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
rand = "0.8"